# factfeed

./: .env.example  .gitignore  .rules  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  babel.cfg  check_db.py  docker-compose.yml  pyproject.toml  query.py  query_countries.py  test_delete.py  test_trans.py
.claude/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_article_ingestion_fields.py  0003_sentence_position_unique.py  1ad44a3e4f6d_add_language_column.py  328bf7f88503_add_country_code_and_region_to_sources.py  72fa28203e8d_.py  cd9dc34cc250_add_sentences_data_to_translation.py
docs/: ARCHITECTURE.md
factfeed/: check_proxies.py  config.py
factfeed/db/: models.py  session.py
factfeed/ingestion/: __init__.py  deduplicator.py  extractor.py  fetcher.py  logging.py  persister.py  runner.py  scheduler.py  sources.py
factfeed/nlp/: __init__.py  calibrator.py  classifier.py  persist.py  pipeline.py  pre_filter.py  segmenter.py  translator.py
factfeed/services/: analytics.py  system_monitor.py
factfeed/static/: style.css
factfeed/templates/: _article_body.html  _drilldown_results.html  _results.html  _system_monitor.html  analytics.html  article.html  base.html  manage.html  search.html
factfeed/web/: deps.py  i18n.py  limiter.py  main.py  schemas.py  templating.py
scripts/: i18n.sh
tests/: conftest.py  test_multi_worker.py  test_rate_limit.py  test_web_routes.py
tests/api/: test_api.py  (+1 more)
(+87 files in other folders)
