[project]
name = "factfeed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.13.1",
    "fastapi[standard]>=0.132.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "trafilatura>=2.0.0",
    "apscheduler>=3.11.2",
    "structlog>=25.5.0",
    "ftfy>=6.3.1",
    "spacy>=3.8.11",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.12.0",
    "slowapi>=0.1.9",
    "Babel>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not slow and not uat'"
markers = [
    "slow: marks tests that load the real transformer model (deselect with '-m not slow')",
    "uat: marks UAT tests that require a seeded database (deselect with '-m not uat')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
